replace links in ticker-text, hacky fix word-wrap on android

--- a/themes/systemli/assets/css/main.css
+++ b/themes/systemli/assets/css/main.css
@@ -190,6 +190,10 @@ nav {
     transition: border-color 0.25s ease 0s;
 }
 
+.ticker-container a {
+    @apply break-all;
+}
+
 /* styles for autogenerated pagination */
 
 .pagination {
